--- a/sass/components/_values.scss
+++ b/sass/components/_values.scss
@@ -21,6 +21,16 @@
   }
 }
 
+.values__list li {
+  margin-bottom: 30px;
+}
+
+@media (min-width: 768px) {
+  .values__list {
+    margin-bottom: 0px;
+  }
+}
+
 .values__box {
   width: 100%;
   height: 120px;
