--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -8,7 +8,7 @@
     width: 30px;
     height: 30px;
     top: 8px;
-    margin: right: 8px;
+    margin-right: 8px;
     left: calc(450px - 8px - 30px);
     background-color: var(--main-white);
     cursor: pointer;
